<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/car"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <TextView
        android:layout_gravity="center"
        android:textColor="#C0C0C0"
        android:textSize="20dp"
        android:text="@string/luxury"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/audi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/title_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</RelativeLayout>