<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:background="#C0C0C0"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <RelativeLayout
            android:layout_margin="20dp"
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="#398AD7"
                android:textSize="20dp"
                android:text="@string/ch1"
                android:id="@+id/c36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/c36"
                android:text="@string/brandname"
                android:textColor="#B22222"
                android:textSize="30dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_below="@+id/rl1"
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15dp"
                    android:text="@string/economy"
                    android:id="@+id/eco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model_ch"
                    android:textSize="20dp" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_person_black_24dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:translationX="5dp"
                        android:translationY="15dp"
                        android:text="@string/p1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_work_black_24dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:translationX="5dp"
                        android:translationY="15dp"
                        android:text="@string/p1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_save_black_24dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:translationX="5dp"
                        android:translationY="15dp"
                        android:text="@string/p1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>


            <ImageView
                android:layout_marginStart="90dp"
                android:src="@drawable/car1"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_toEndOf="@+id/ll1"
                android:textColor="#B22222"
                android:textSize="30dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_below="@+id/rl2"
            android:orientation="horizontal"
            android:id="@+id/dubai_title"
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <TextView
                android:textStyle="bold"
                android:id="@+id/textdate"
                android:text="@string/date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_below="@+id/textdate"
                android:textSize="15dp"
                android:text="@string/pick_up"
                android:id="@+id/txt_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingLeft="50dp"
                android:layout_toEndOf="@+id/txt_pick"
                android:layout_below="@+id/textdate"
                android:textSize="15dp"
                android:text="@string/terminal"
                android:id="@+id/txt_dub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingLeft="170dp"
                android:layout_toEndOf="@+id/txt_pick"
                android:layout_below="@+id/textdate"
                android:textSize="15dp"
                android:text="@string/terminal"
                android:id="@+id/txt_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>



</RelativeLayout>